--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -20,12 +20,15 @@ jobs:
           export PATH=$THEOS/bin:$PATH
           echo "Theos installation complete."
 
+      - name: Install Homebrew
+        run: |
+          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          echo "export PATH=/usr/local/bin:$PATH" >> ~/.bash_profile
+          source ~/.bash_profile
+
       - name: Install ldid
         run: |
-          git clone https://github.com/iphonedev/ldid.git
-          cd ldid
-          make
-          sudo cp ldid /usr/local/bin/
+          brew install ldid
 
       - name: Set up environment variables
         run: |
